# usuario

./: README.md
users/: .env.example  .gitignore  ARCHITECTURE.md  INTERVIEW_GUIDE.md  README.md  main.py  pyproject.toml
users/api/: users.py
users/core/: config.py  database.py
users/models/: user.py
users/schemas/: user.py
users/services/: user_service.py
